[package]
name = "dbc-executor"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
scale-info = { version = "2.1.1", features = ["derive"] }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

dbc-runtime = { path = "../runtime" }


[features]
stress-test = []

[[bench]]
name = "bench"
harness = false
