[package]
name = "dbc-executor"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }
sc-executor = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }
node-primitives = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
sp-state-machine = { workspace = true, features = ["std"] }
sp-tracing = { workspace = true, features = ["std"] }
sp-trie = { workspace = true, features = ["std"] }

dbc-runtime = { path = "../runtime" }


[features]
stress-test = []

[[bench]]
name = "bench"
harness = false
