[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "node-inspect"
repository = "https://github.com/paritytech/substrate/"
version = "0.8.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99"
log = "0.4.8"
structopt = "0.3.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
