[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'node-rpc-client'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.1.29'
hyper = '~0.12.35'
log = '0.4.8'

[dependencies.jsonrpc-core-client]
default-features = false
features = ['http']
version = '15.1.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-tracing]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'
