[package]
name = "dbc-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { workspace = true, features = ["server"] }
dbc-primitives = { path = "../primitives" }
pallet-transaction-payment-rpc = { workspace = true }
sc-chain-spec = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

committee-rpc = { path = "../pallets/committee/rpc" }
online-committee-rpc = { path = "../pallets/online-committee/rpc" }
online-profile-rpc = { path = "../pallets/online-profile/rpc" }
rent-machine-rpc = { path = "../pallets/rent-machine/rpc" }
rent-dlc-machine-rpc = { path = "../pallets/rent-dlc-machine/rpc" }

simple-rpc-rpc = { path = "../pallets/simple-rpc/rpc" }
terminating-rental-rpc = { path = "../pallets/terminating-rental/rpc" }

# Finality-rpc
dbc-finality-rpc = { path = "../client/rpc/finality" }

# EVM
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-rpc = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-network = { workspace = true }
